--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ForgotPassword.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ForgotPassword.razor
@@ -13,26 +13,25 @@
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Forgot your password?</PageTitle>
+<PageTitle>فراموشی رمز عبور</PageTitle>
 
-<h1>Forgot your password?</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <EditForm Model="Input" FormName="forgot-password" OnValidSubmit="OnValidSubmitAsync" method="post">
-            <DataAnnotationsValidator />
-            <ValidationSummary class="text-danger" role="alert" />
+<MudText Typo="Typo.h3" GutterBottom="true">رمز عبور خود را فراموشی کرده اید؟</MudText>
+<MudText Typo="Typo.body1" GutterBottom="true">ایمیل خود را وارد کنید</MudText>
 
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.Email" id="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label for="Input.Email" class="form-label">Email</label>
-                <ValidationMessage For="() => Input.Email" class="text-danger" />
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset password</button>
-        </EditForm>
-     </div>
-</div>
+<EditForm Model="Input" FormName="forgot-password" OnValidSubmit="OnValidSubmitAsync" method="post">
+    <DataAnnotationsValidator />
+
+    <MudGrid>
+        <MudItem md="12">
+            <MudStaticTextField @bind-Value="Input.Email" For="@(() => Input.Email)"
+                                Label="ایمیل" Placeholder="name@example.com"
+                                UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "username" }, { "aria-required", "true" } } )" />
+        </MudItem>
+        <MudItem md="12">
+            <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" FormAction="FormAction.Submit">بازنشانی رمز عبور</MudStaticButton>
+        </MudItem>
+    </MudGrid>
+</EditForm>
 
 @code {
     [SupplyParameterFromForm]
