--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ForgotPasswordConfirmation.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ForgotPasswordConfirmation.razor
@@ -1,8 +1,7 @@
 ﻿@page "/Account/ForgotPasswordConfirmation"
 
-<PageTitle>Forgot password confirmation</PageTitle>
+<PageTitle>تایید فراموشی رمز عبور</PageTitle>
 
-<h1>Forgot password confirmation</h1>
-<p role="alert">
-    Please check your email to reset your password.
-</p>
+<MudText Typo="Typo.h3" GutterBottom="true">تایید فراموشی رمز عبور</MudText>
+
+<MudText Typo="Typo.body1" GutterBottom="true">لطفا ایمیل خود را جهت بازنشانی رمز عبور چک کنید</MudText>
