--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/InvalidPasswordReset.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/InvalidPasswordReset.razor
@@ -1,8 +1,8 @@
 ﻿@page "/Account/InvalidPasswordReset"
 
-<PageTitle>Invalid password reset</PageTitle>
+<PageTitle>بازنشانی نامعتبر رمز عبور</PageTitle>
 
-<h1>Invalid password reset</h1>
+<h1>بازنشانی نامعتبر رمز عبور</h1>
 <p role="alert">
-    The password reset link is invalid.
+    لینک بازنشانی رمز عبور معتبر نیست
 </p>
