--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/InvalidUser.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/InvalidUser.razor
@@ -1,8 +1,8 @@
 ﻿@page "/Account/InvalidUser"
 @using GoldEx.Server.Components.Account.Shared
 
-<PageTitle>Invalid user</PageTitle>
+<PageTitle>کاربر نامعتبر</PageTitle>
 
-<h3>Invalid user</h3>
+<h3>کاربر نامعتبر</h3>
 
 <StatusMessage />
