--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Lockout.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Lockout.razor
@@ -1,8 +1,8 @@
 ﻿@page "/Account/Lockout"
 
-<PageTitle>Locked out</PageTitle>
+<PageTitle>مسدود شدن</PageTitle>
 
 <header>
-    <h1 class="text-danger">Locked out</h1>
-    <p class="text-danger" role="alert">This account has been locked out, please try again later.</p>
+    <h1 class="text-danger">مسدود</h1>
+    <p class="text-danger" role="alert">حساب شما مسدود شده است لطفا بعدا مجددا امتحان کنید.</p>
 </header>
