--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/RegisterConfirmation.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/RegisterConfirmation.razor
@@ -12,27 +12,27 @@
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Register confirmation</PageTitle>
+<PageTitle>تایید ثبت نام</PageTitle>
 
-<h1>Register confirmation</h1>
+<h1>تایید ثبت نام</h1>
 
-<StatusMessage Message="@statusMessage" />
+<StatusMessage Message="@_statusMessage" />
 
-@if (emailConfirmationLink is not null)
+@if (_emailConfirmationLink is not null)
 {
     <p>
         This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-        Normally this would be emailed: <a href="@emailConfirmationLink">Click here to confirm your account</a>
+        Normally this would be emailed: <a href="@_emailConfirmationLink">Click here to confirm your account</a>
     </p>
 }
 else
 {
-    <p role="alert">Please check your email to confirm your account.</p>
+    <p role="alert">لطفا برای تکمیل ثبت نام، ایمیل خود را چک کنید</p>
 }
 
 @code {
-    private string? emailConfirmationLink;
-    private string? statusMessage;
+    private string? _emailConfirmationLink;
+    private string? _statusMessage;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
@@ -54,7 +54,7 @@ else
         if (user is null)
         {
             HttpContext.Response.StatusCode = StatusCodes.Status404NotFound;
-            statusMessage = "Error finding user for unspecified email";
+            _statusMessage = "کاربری با ایمیل وارد شده پیدا نشد";
         }
         else if (EmailSender is IdentityNoOpEmailSender)
         {
@@ -62,7 +62,7 @@ else
             var userId = await UserManager.GetUserIdAsync(user);
             var code = await UserManager.GenerateEmailConfirmationTokenAsync(user);
             code = WebEncoders.Base64UrlEncode(Encoding.UTF8.GetBytes(code));
-            emailConfirmationLink = NavigationManager.GetUriWithQueryParameters(
+            _emailConfirmationLink = NavigationManager.GetUriWithQueryParameters(
                 NavigationManager.ToAbsoluteUri("Account/ConfirmEmail").AbsoluteUri,
                 new Dictionary<string, object?> { ["userId"] = userId, ["code"] = code, ["returnUrl"] = ReturnUrl });
         }
