--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ResetPassword.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ResetPassword.razor
@@ -10,12 +10,11 @@
 
 @inject IdentityRedirectManager RedirectManager
 @inject UserManager<AppUser> UserManager
+<PageTitle>بازنشانی رمز عبور</PageTitle>
 
-<PageTitle>Reset password</PageTitle>
-
-<h1>Reset password</h1>
-<h2>Reset your password.</h2>
-<hr />
+<h1>بازنشانی رمز عبور</h1>
+<h2>رمز خود را بازنشانی کنید</h2>
+<MudDivider />
 <div class="row">
     <div class="col-md-4">
         <StatusMessage Message="@Message" />
@@ -26,26 +25,25 @@
             <input type="hidden" name="Input.Code" value="@Input.Code" />
             <div class="form-floating mb-3">
                 <InputText @bind-Value="Input.Email" id="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label for="Input.Email" class="form-label">Email</label>
+                <label for="Input.Email" class="form-label">ایمیل</label>
                 <ValidationMessage For="() => Input.Email" class="text-danger" />
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.Password" id="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please enter your password." />
-                <label for="Input.Password" class="form-label">Password</label>
+                <InputText type="password" @bind-Value="Input.Password" id="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="رمز عبور جدید خود را وارد کنید" />
+                <label for="Input.Password" class="form-label">رمز عبور</label>
                 <ValidationMessage For="() => Input.Password" class="text-danger" />
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please confirm your password." />
-                <label for="Input.ConfirmPassword" class="form-label">Confirm password</label>
+                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="لطفا رمز جدید خود را تکرار کنید" />
+                <label for="Input.ConfirmPassword" class="form-label">تکرار رمز عبور</label>
                 <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">بازنشانی</button>
         </EditForm>
     </div>
 </div>
-
 @code {
-    private IEnumerable<IdentityError>? identityErrors;
+    private IEnumerable<IdentityError>? _identityErrors;
 
     [SupplyParameterFromForm]
     private InputModel Input { get; set; } = new();
@@ -53,7 +51,7 @@
     [SupplyParameterFromQuery]
     private string? Code { get; set; }
 
-    private string? Message => identityErrors is null ? null : $"Error: {string.Join(", ", identityErrors.Select(error => error.Description))}";
+    private string? Message => _identityErrors is null ? null : $"Error: {string.Join(", ", _identityErrors.Select(error => error.Description))}";
 
     protected override void OnInitialized()
     {
@@ -80,7 +78,7 @@
             RedirectManager.RedirectTo("Account/ResetPasswordConfirmation");
         }
 
-        identityErrors = result.Errors;
+        _identityErrors = result.Errors;
     }
 
     private sealed class InputModel
@@ -90,13 +88,13 @@
         public string Email { get; set; } = "";
 
         [Required]
-        [StringLength(100, ErrorMessage = "The {0} must be at least {2} and at max {1} characters long.", MinimumLength = 6)]
+        [StringLength(100, ErrorMessage = "طول {0} حداقل باید {2} و حداکثر {1} حرف باشد.", MinimumLength = 6)]
         [DataType(DataType.Password)]
         public string Password { get; set; } = "";
 
         [DataType(DataType.Password)]
-        [Display(Name = "Confirm password")]
-        [Compare("Password", ErrorMessage = "The password and confirmation password do not match.")]
+        [Display(Name = "تکرار رمز عبور")]
+        [Compare("Password", ErrorMessage = "رمز عبور با تکرار آن مطابقت ندارد")]
         public string ConfirmPassword { get; set; } = "";
 
         [Required]
