--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ResetPasswordConfirmation.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ResetPasswordConfirmation.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Account/ResetPasswordConfirmation"
-<PageTitle>Reset password confirmation</PageTitle>
+<PageTitle>تایید بازنشانی رمز عبور</PageTitle>
 
-<h1>Reset password confirmation</h1>
+<h1>تایید بازنشانی رمز عبور</h1>
 <p role="alert">
-    Your password has been reset. Please <a href="Account/Login">click here to log in</a>.
+    رمز عبور شما بازنشانی شد. لطفا برای ورود <a href="Account/Login">کلیک کنید</a>.
 </p>
