--- a/src/App/Server/GoldEx.Server/Components/Pages/Error.razor
+++ b/src/App/Server/GoldEx.Server/Components/Pages/Error.razor
@@ -1,10 +1,10 @@
 ﻿@page "/Error"
 @using System.Diagnostics
 
-<PageTitle>Error</PageTitle>
+<PageTitle>خطا</PageTitle>
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger">خطا.</h1>
+<h2 class="text-danger">خطایی در اجرای درخواست شما پیش آمد.</h2>
 
 @if (ShowRequestId)
 {
