--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ConfirmEmail.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ConfirmEmail.razor
@@ -10,13 +10,13 @@
 @inject UserManager<AppUser> UserManager
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Confirm email</PageTitle>
+<PageTitle>تایید ایمیل</PageTitle>
 
-<h1>Confirm email</h1>
-<StatusMessage Message="@statusMessage" />
+<h1>تایید ایمیل</h1>
+<StatusMessage Message="@_statusMessage" />
 
 @code {
-    private string? statusMessage;
+    private string? _statusMessage;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
@@ -38,13 +38,13 @@
         if (user is null)
         {
             HttpContext.Response.StatusCode = StatusCodes.Status404NotFound;
-            statusMessage = $"Error loading user with ID {UserId}";
+            _statusMessage = $"Error loading user with ID {UserId}";
         }
         else
         {
             var code = Encoding.UTF8.GetString(WebEncoders.Base64UrlDecode(Code));
             var result = await UserManager.ConfirmEmailAsync(user, code);
-            statusMessage = result.Succeeded ? "Thank you for confirming your email." : "Error confirming your email.";
+            _statusMessage = result.Succeeded ? "از تأیید ایمیلتان متشکریم" : "خطا در تایید آدرس ایمیل";
         }
     }
 }
