--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ResendEmailConfirmation.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ResendEmailConfirmation.razor
@@ -4,7 +4,6 @@
 @using System.Text
 @using System.Text.Encodings.Web
 @using GoldEx.Sdk.Server.Domain.Entities.Identity
-@using GoldEx.Server.Services
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using GoldEx.Server.Components.Account.Shared
@@ -12,41 +11,42 @@
 @inject UserManager<AppUser> UserManager
 @inject IEmailSender<AppUser> EmailSender
 @inject NavigationManager NavigationManager
-@inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Resend email confirmation</PageTitle>
+<PageTitle>ارسال مجدد ایمیل فعالسازی</PageTitle>
 
-<h1>Resend email confirmation</h1>
-<h2>Enter your email.</h2>
-<hr />
-<StatusMessage Message="@message" />
-<div class="row">
-    <div class="col-md-4">
-        <EditForm Model="Input" FormName="resend-email-confirmation" OnValidSubmit="OnValidSubmitAsync" method="post">
-            <DataAnnotationsValidator />
-            <ValidationSummary class="text-danger" role="alert" />
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.Email" id="Input.Email" class="form-control" aria-required="true" placeholder="name@example.com" />
-                <label for="Input.Email" class="form-label">Email</label>
-                <ValidationMessage For="() => Input.Email" class="text-danger" />
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Resend</button>
-        </EditForm>
-    </div>
-</div>
+<MudText Typo="Typo.h3" GutterBottom="true">ارسال مجدد ایمیل فعالسازی</MudText>
+
+<MudText Typo="Typo.body1" GutterBottom="true">ایمیل خود را وارد کنید</MudText>
+
+<StatusMessage Message="@_message" />
+
+<EditForm Model="Input" FormName="resend-email-confirmation" OnValidSubmit="OnValidSubmitAsync" method="post">
+    <DataAnnotationsValidator />
+
+    <MudGrid>
+        <MudItem md="12">
+            <MudStaticTextField For="@(() => Input.Email)" @bind-Value="Input.Email"
+                                Label="ایمیل" Placeholder="name@example.com"
+                                UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "username" }, { "aria-required", "true" } } )" />
+        </MudItem>
+        <MudItem md="12">
+            <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" FormAction="FormAction.Submit">ارسال</MudStaticButton>
+        </MudItem>
+    </MudGrid>
+</EditForm>
 
 @code {
-    private string? message;
+    private string? _message;
 
     [SupplyParameterFromForm]
     private InputModel Input { get; set; } = new();
 
     private async Task OnValidSubmitAsync()
     {
-        var user = await UserManager.FindByEmailAsync(Input.Email!);
+        var user = await UserManager.FindByEmailAsync(Input.Email);
         if (user is null)
         {
-            message = "Verification email sent. Please check your email.";
+            _message = "ایمیل تایید ارسال شد لطفا ایمیل خود را چک کنید";
             return;
         }
 
@@ -58,7 +58,7 @@
             new Dictionary<string, object?> { ["userId"] = userId, ["code"] = code });
         await EmailSender.SendConfirmationLinkAsync(user, Input.Email, HtmlEncoder.Default.Encode(callbackUrl));
 
-        message = "Verification email sent. Please check your email.";
+        _message = "ایمیل تایید ارسال شد لطفا ایمیل خود را چک کنید";
     }
 
     private sealed class InputModel
