--- a/src/App/Server/GoldEx.Server/Components/Account/Shared/ManageLayout.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Shared/ManageLayout.razor
@@ -1,17 +1,15 @@
 ﻿@inherits LayoutComponentBase
 @layout GoldEx.Client.Layout.MainLayout
 
-<h1>Manage your account</h1>
+<MudText Typo="Typo.h3" GutterBottom="true">مدیریت حساب</MudText>
 
-<div>
-    <h2>Change your account settings</h2>
-    <hr />
-    <div class="row">
-        <div class="col-lg-3">
-            <ManageNavMenu />
-        </div>
-        <div class="col-lg-9">
-            @Body
-        </div>
-    </div>
-</div>
+<MudGrid>
+    <MudItem md="5">
+        <MudText Typo="Typo.h6" GutterBottom="true">تنظیمات حساب کاربری</MudText>
+        <ManageNavMenu />
+    </MudItem>
+    <MudItem md="7">
+        @Body
+    </MudItem>
+</MudGrid>
+
