--- a/src/App/Server/GoldEx.Server/Components/Account/Shared/ShowRecoveryCodes.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Shared/ShowRecoveryCodes.razor
@@ -1,11 +1,11 @@
 ﻿<StatusMessage Message="@StatusMessage" />
-<h3>Recovery codes</h3>
+<h3>کدهای بازیابی</h3>
 <div class="alert alert-warning" role="alert">
     <p>
-        <strong>Put these codes in a safe place.</strong>
+        <strong>این کدها را در مکان امنی قرار دهید</strong>
     </p>
     <p>
-        If you lose your device and don't have the recovery codes you will lose access to your account.
+        اگر دستگاه خود را گم کنید و کدهای بازیابی را نداشته باشید، دسترسی به حساب خود را از دست خواهید داد.
     </p>
 </div>
 <div class="row">
