--- a/src/App/Server/GoldEx.Server/Components/Account/Shared/ManageLayout.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Shared/ManageLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-@layout GoldEx.Client.Layout.MainLayout
+@layout MainLayout
 
 <MudText Typo="Typo.h3" GutterBottom="true">مدیریت حساب</MudText>
 
