--- a/src/App/Client/GoldEx.Client.Components/Layouts/_Imports.razor
+++ b/src/App/Client/GoldEx.Client.Components/Layouts/_Imports.razor
@@ -5,4 +5,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
 @using GoldEx.Client.Components.Layouts.Components
+@using GoldEx.Client.Components.Services
+@using GoldEx.Shared.Abstractions
 @using MudBlazor
